--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.8.2",
         "@tailwindcss/vite": "^4.1.11",
+        "@uiw/react-md-editor": "^4.0.7",
+        "mermaid": "^11.8.1",
         "prettier": "^3.6.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
